--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+
+<link rel="stylesheet" href="bower_components/Ink/dist/css/ink.min.css">
+<link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+
+<div class="button-toolbar">
+	<div class="button-group">
+		<button class="ink-button"><span class="fa fa-file"></span></button>
+		<button class="ink-button"><span class="fa fa-save"></span></button>
+	</div>
+	<div class="button-group">
+		<button class="ink-button"><span class="fa fa-bold"></span></button>
+		<button class="ink-button"><span class="fa fa-italic"></span></button>
+		<button class="ink-button"><span class="fa fa-underline"></span></button>
+	</div>
+	<div class="button-group">
+		<button class="ink-button"><span class="fa fa-align-left"></span></button>
+		<button class="ink-button"><span class="fa fa-align-center"></span></button>
+		<button class="ink-button"><span class="fa fa-align-right"></span></button>
+		<button class="ink-button"><span class="fa fa-align-justify"></span></button>
+	</div>
+</div>
 
 <canvas id="canvas"></canvas>
 
