installed jquery using bower

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <canvas id="canvas"></canvas>
 
-<script src="lib/jquery-2.1.1.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
 <script src="lib/coffee-script.js" type="text/javascript" charset="utf-8"></script>
