installed backbone and underscore using bower

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <canvas id="canvas"></canvas>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="lib/underscore-min.js"></script>
-<script src="lib/backbone-min.js"></script>
+<script src="bower_components/underscore/underscore-min.js"></script>
+<script src="bower_components/backbone/backbone.js"></script>
 <script src="lib/coffee-script.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/coffeescript" src="coffee/canvas.coffee"></script>
 <script type="text/coffeescript" src="coffee/app.coffee"></script>
