--- a/index.html
+++ b/index.html
@@ -2,24 +2,61 @@
 
 <link rel="stylesheet" href="bower_components/Ink/dist/css/ink.min.css">
 <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/toolbar.css">
 
-<div class="button-toolbar">
-	<div class="button-group">
-		<button class="ink-button"><span class="fa fa-file"></span></button>
-		<button class="ink-button"><span class="fa fa-save"></span></button>
-	</div>
-	<div class="button-group">
-		<button class="ink-button"><span class="fa fa-bold"></span></button>
-		<button class="ink-button"><span class="fa fa-italic"></span></button>
-		<button class="ink-button"><span class="fa fa-underline"></span></button>
-	</div>
-	<div class="button-group">
-		<button class="ink-button"><span class="fa fa-align-left"></span></button>
-		<button class="ink-button"><span class="fa fa-align-center"></span></button>
-		<button class="ink-button"><span class="fa fa-align-right"></span></button>
-		<button class="ink-button"><span class="fa fa-align-justify"></span></button>
-	</div>
-</div>
+<nav class="ink-navigation">
+	<ul class="menu horizontal black">
+		<li class="disabled"><a href="">[Bezier]</a></li>
+		<li>
+			<a href="#">File</a>
+			<ul class="submenu">
+				<li><a href="#"><span class="fa fa-plus"></span> New</a></li>
+				<li>
+					<a href="#"><span class="fa fa-download"></span> Export</a>
+					<ul class="submenu flyout right">
+						<li><a href="#">export as png</a></li>
+						<li><a href="#">export as svg</a></li>
+						<li><a href="#">export as ai</a></li>
+					</ul>
+				</li>
+				<li><a href="#"><span class="fa fa-reply"></span> Back</a></li>
+				<li><a href="#"><span class="fa fa-share"></span> Redo</a></li>
+			</ul>
+		</li>
+	</ul>
+</nav>
+
+<nav class="ink-navigation">
+	<ul class="dropdown red">
+		<li>
+			<a href="#"><span class="fa fa-plus-square-o"></span>&nbsp;選択ツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-minus"></span>&nbsp;直線ツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-pencil"></span>&nbsp;ペンツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-square-o"></span>&nbsp;長方形ツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-paint-brush"></span>&nbsp;ブラシツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-font"></span>&nbsp;文字ツール</a>
+		</li>
+		<li>
+			<a href="#"><span class="fa fa-eyedropper"></span>&nbsp;スポイトツール</a>
+		</li>
+		<li class="separator-above">
+			<a href="#">ぬり：</a>
+		</li>
+		<li>
+			<a href="#">いろ：</a>
+		</li>
+	</ul>
+</nav>
 
 <canvas id="canvas"></canvas>
 
